# buttery-engine

./: Cargo.toml  README.md  build-for-web.sh  index.html
core/: Cargo.toml  README.md
core/plans/: object and components.md
core/src/: camera.rs  component.rs  engine.rs  game.rs  key_event.rs  lib.rs  object.rs  registry.rs  renderer.rs  ui.rs  windowing.rs  world_model.rs
example/: Cargo.toml  README.md  build-for-web.sh  index.html
example/src/: camera_controller.rs  component.rs  core.rs  lib.rs  main.rs
landmass_generator/: index.html  index.js
slippery-renderer/: Cargo.toml  README.md
slippery-renderer/src/: async_model_loading.rs  binary_loader.rs  camera.rs  glb_parser.rs  gltf_dto.rs  lib.rs  light.rs  mesh.rs  offset.rs  renderer.rs  windowing.rs
slippery-renderer/src/shader/: light.wgsl  shader.wgsl
src/: app.rs  camera.rs  camera_controller.rs  glb_parser.rs  gltf_dto.rs  lib.rs  light.rs  light.wgsl  main.rs  mesh.rs  obj_parser.rs  obj_parser_v2.rs  offset.rs  shader.wgsl  state.rs  vertex.rs
src/core/: engine.rs  game.rs  key_event.rs  mod.rs  object.rs  renderer.rs  ui.rs  windowing.rs  world_model.rs
src/example/: camera_controller.rs  core.rs  mod.rs
src/slippery_renderer/: camera.rs  camera_controller.rs  glb_parser.rs  light.rs  mesh.rs  mod.rs  renderer.rs  renderer_impl.rs  shader.wgsl  vertex.rs  windowing.rs
