[package]
name = "graphics-test"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.100"
bytemuck = {version = "1.24.0", features = ["derive"]}
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
env_logger = "0.11.8"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
log = "0.4.29"
pollster = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
thiserror = { version = "2.0.18" }
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
web-sys = { version = "0.3.83", features = [
    "Document",
    "Window",
    "Element",
]}
web-time = "1.1.0"
wgpu = {version = "27.0.1", features = ["webgl"]}
winit = { version = "0.30.12", features = ["android-native-activity"] }
