[package]
name = "buttery-engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.100"
bytemuck = {version = "1.24.0", features = ["derive"]}
cgmath = { version = "0.18.0" }
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
egui = "0.33.3"
egui-winit = { version = "0.33.3", default-features = false, features = ["x11"] }
egui-wgpu = "0.33.3"
env_logger = "0.11.8"
image = { version = "0.24.9", default-features = false, features = ["png", "jpeg"] }
js-sys = "0.3.85"
log = "0.4.29"
pollster = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
thiserror = { version = "2.0.18" }
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.56"
web-sys = { version = "0.3.83", features = [
    "Document",
    "Element",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
]}
web-time = "1.1.0"
wgpu = {version = "27.0.1", features = ["webgl"]}
winit = { version = "0.30.12", features = ["android-native-activity"] }
