[package]
name = "buttery-engine"
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "A very simplistic game-engine written in rust. This is a learning project for me, so no promises on it's performance or stability."
repository = "https://github.com/HideakiToro/buttery-engine/core"
homepage = "https://github.com/HideakiToro"
readme = "README.md"

[dependencies]
anyhow = { version = "1.0.100" }
cgmath = { version = "0.18.0" }
uuid = { version = "1.23.1", features = ["v4"] }
web-time = { version = "1.1.0" }