[package]
name = "slippery-renderer"
version = "0.6.0"
edition = "2024"
license = "MIT"
description = "This crate is the first implementation for a renderer of the buttery-engine game-engine project. Since I am very much still a beginner, this renderer's performance might slip sometimes. This is where it got it's name from."
repository = "https://github.com/HideakiToro/buttery-engine/slippery-renderer"
homepage = "https://github.com/HideakiToro"
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
buttery-engine = { version = "0.6.0" }
bytemuck = {version = "1.24.0", features = ["derive"]}
cgmath = { version = "0.18.0" }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
egui = "0.33.3"
egui-winit = { version = "0.33.3", default-features = false, features = ["x11"] }
egui-wgpu = "0.33.3"
env_logger = "0.11.8"
image = { version = "0.24.9", default-features = false, features = ["png", "jpeg"] }
js-sys = "0.3.85"
log = "0.4.29"
pollster = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
thiserror = { version = "2.0.18" }
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.56"
web-sys = { version = "0.3.83", features = [
    "Document",
    "Element",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
]}
wgpu = {version = "27.0.1", features = ["webgl"]}
winit = { version = "0.30.12", features = ["android-native-activity"] }